<resources>
    <string name="app_name">UserManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome @@@ </string>
    <string name="nav_header_subtitle">SUB title</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings related to Error-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_new_password">The new password must be different to current password</string>
    <string name="error_invalid_repeat_password">This repeat password is different to new password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to forgot password -->
    <string name="forgot_password"><u>Forgot your Password?</u></string>
    <string name="title_activity_forgot_password">Reset password</string>
    <string name="forgot_email">Email Address</string>
    <string name="forgot_first_name">First Name</string>
    <string name="forgot_last_name">Last Name</string>
    <string name="forgot_reset">Reset Password</string>

    <!-- Strings related to Sign Up -->
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_up_string">Don\'t have an account?</string>
    <string name="sign_up_email">Email Address</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_repeat_password">Repeat Password</string>
    <string name="sign_up_birth_date">Birth Date</string>
    <string name="sign_up_button">Sign Up</string>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <!-- Strings related to forgot password -->
    <string name="password_email">Email Address</string>
    <string name="password_current_password">Current Password</string>
    <string name="password_new_password">New Password</string>
    <string name="password_repeat_new_password">Repeat New Password</string>
    <string name="password_button">Password Change</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
